# competition-interfaces

competition_test_tools/: CMakeLists.txt  README.md  package.xml
competition_test_tools/include/: teleop_base.hpp
competition_test_tools/launch/: hsr.rviz  teleop_handyman_launch.xml  teleop_human_navigation_launch.xml  teleop_interactive_cleanup_launch.xml  teleop_key_launch.xml
competition_test_tools/src/: teleop_handyman.cpp  teleop_human_navigation.cpp  teleop_interactive_cleanup.cpp  teleop_key.cpp
handyman_msgs/: CMakeLists.txt  package.xml
human_navigation_msgs/: CMakeLists.txt  package.xml
interactive_cleanup_msgs/: CMakeLists.txt  package.xml
