<?xml version="1.0"?>
<package format="3">
  <name>competition_test_tools</name>
  <version>1.0.0</version>
  <description>Competition Testing Tools</description>
  <maintainer email="inamura.laboratory@gmail.com">inamura laboratory</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>handyman_msgs</depend>
  <depend>interactive_cleanup_msgs</depend>
  <depend>human_navigation_msgs</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>sigverse_ros_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

